--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
       </section>
 
-      <!--benefits
+      <!--benefits-->
       <section class="benefits">
         <div class="container">
           <h2 class="visually-hidden" hidden>Преимущества</h2>
@@ -128,7 +128,7 @@
             </li>
           </ul>
         </div>
-      </section>-->
+      </section>
 
       <!--what we do
 
