--- a/index.html
+++ b/index.html
@@ -130,13 +130,13 @@
         </div>
       </section>
 
-      <!--what we do
+      <!--what we do-->
 
       <section class="our-work">
         <div class="container">
           <h2 class="subtitle">Чем мы занимаемся</h2>
           <ul class="our-work-list list">
-            <li>
+            <li class="our-work-item">
               <img
                 class="our-work-img"
                 src="./images/work/img1.jpg"
@@ -144,19 +144,25 @@
                 width="370"
                 height="294"
               />
-              <p class="our-work-list-text">Десктопные приложения</p>
+              <div class="our-work-list-card">
+                <p class="our-work-list-text">Десктопные приложения</p>
+              </div>
             </li>
-            <li>
-              <img
-                class="our-work-img"
-                src="./images/work/img2.jpg"
-                alt="держым смартфон"
-                width="370"
-                height="294"
-              />
-              <p class="our-work-list-text">Мобильные приложения</p>
+            <li class="our-work-item">
+              <picture>
+                <img
+                  class="our-work-img"
+                  src="./images/work/img2.jpg"
+                  alt="держым смартфон"
+                  width="370"
+                  height="294"
+                />
+              </picture>
+              <div class="our-work-list-card">
+                <p class="our-work-list-text">Мобильные приложения</p>
+              </div>
             </li>
-            <li>
+            <li class="our-work-item">
               <img
                 class="our-work-img"
                 src="./images/work/img3.jpg"
@@ -164,11 +170,13 @@
                 width="370"
                 height="294"
               />
-              <p class="our-work-list-text">Дизайнерские решения</p>
+              <div class="our-work-list-card">
+                <p class="our-work-list-text">Дизайнерские решения</p>
+              </div>
             </li>
           </ul>
         </div>
-      </section>-->
+      </section>
 
       <!--team
 
