--- a/index.html
+++ b/index.html
@@ -137,19 +137,26 @@
           <h2 class="subtitle">Чем мы занимаемся</h2>
           <ul class="our-work-list list">
             <li class="our-work-item">
-              <img
-                class="our-work-img"
-                src="./images/work/img1.jpg"
-                alt="печатаем на клавиауре"
-                width="370"
-                height="294"
-              />
+              <picture>
+                <source srcset="./images/work/img.1.jpg 1x, ./img.1-2x.jpg 2x
+                media="min-width: 1200px)" />
+
+                <img
+                  class="our-work-img"
+                  src="./images/work/img1.jpg"
+                  alt="печатаем на клавиауре"
+                  width="370"
+                  height="294"
+                />
+              </picture>
               <div class="our-work-list-card">
                 <p class="our-work-list-text">Десктопные приложения</p>
               </div>
             </li>
             <li class="our-work-item">
               <picture>
+                <source srcset="./images/work/img.2.jpg 1x, ./img.2-2x.jpg 2x
+                media="min-width: 1200px)" />
                 <img
                   class="our-work-img"
                   src="./images/work/img2.jpg"
@@ -163,13 +170,17 @@
               </div>
             </li>
             <li class="our-work-item">
-              <img
-                class="our-work-img"
-                src="./images/work/img3.jpg"
-                alt="держым планшет"
-                width="370"
-                height="294"
-              />
+              <picture>
+                <source srcset="./images/work/img.3.jpg 1x, ./img.3-2x.jpg 2x
+                media="min-width: 1200px)" />
+                <img
+                  class="our-work-img"
+                  src="./images/work/img3.jpg"
+                  alt="держым планшет"
+                  width="370"
+                  height="294"
+                />
+              </picture>
               <div class="our-work-list-card">
                 <p class="our-work-list-text">Дизайнерские решения</p>
               </div>
@@ -178,7 +189,7 @@
         </div>
       </section>
 
-      <!--team
+      <!--team-->
 
       <section class="workers">
         <div class="container">
@@ -362,7 +373,7 @@
             </li>
           </ul>
         </div>
-      </section>-->
+      </section>
 
       <!--customers
 
