--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         </div>
       </section>
 
-      <!--what we do-->
+      <!--what we do
 
       <section class="our-work">
         <div class="container">
@@ -187,7 +187,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section>-->
 
       <!--team-->
 
@@ -198,8 +198,11 @@
             <li class="workers-list-item">
               <picture>
                 <source
-                  media="(min-width: 320px)"
-                  srcset="./images/masters/img1-1х.jpg 1x, ./img1-2х.jpg 2x"
+                  media="(min-width:1200px)"
+                  srcset="
+                    ./images/masters/img1-desk-1x.jpg 1x,
+                    ./img1-desk-2x.jpg                2x
+                  "
                 />
                 <source
                   media="(min-width:768px)"
@@ -209,11 +212,8 @@
                   "
                 />
                 <source
-                  media="(min-width:1200px)"
-                  srcset="
-                    ./images/masters/img1-desk-1x.jpg 1x,
-                    ./img1-desk-2x.jpg                2x
-                  "
+                  media="(min-width: 320px)"
+                  srcset="./images/masters/img1-1х.jpg 1x, ./img1-2х.jpg 2x"
                 />
                 <img
                   class="workers-photo"
@@ -260,8 +260,11 @@
             <li class="workers-list-item">
               <picture>
                 <source
-                  media="(min-width:320px)"
-                  srcset="./images/masters/img2-1х.jpg 1x, ./img2-2х.jpg 2x"
+                  media="(min-width:1200px)"
+                  srcset="
+                    ./images/masters/img2-desk-1x.jpg 1x,
+                    ./img2-desk-2x.jpg
+                  "
                 />
                 <source
                   media="(min-width:768px)"
@@ -271,11 +274,8 @@
                   "
                 />
                 <source
-                  media="(min-width:1200px)"
-                  srcset="
-                    ./images/masters/img2-desk-1x.jpg 1x,
-                    ./img2-desk-2x.jpg
-                  "
+                  media="(min-width:320px)"
+                  srcset="./images/masters/img2-1х.jpg 1x, ./img2-2х.jpg 2x"
                 />
                 <img
                   class="workers-photo"
@@ -322,8 +322,11 @@
             <li class="workers-list-item">
               <picture>
                 <source
-                  media="(min-width:320px)"
-                  srcset="./images/masters/img3-1х.jpg 1x, ./img3-2х.jpg 2x"
+                  media="(min-width:1200px)"
+                  srcset="
+                    ./images/masters/img3-desk-1x.jpg 1x,
+                    ./img3-desk-2x.jpg
+                  "
                 />
                 <source
                   media="(min-width:768px)"
@@ -333,11 +336,8 @@
                   "
                 />
                 <source
-                  media="(min-width:1200px)"
-                  srcset="
-                    ./images/masters/img3-desk-1x.jpg 1x,
-                    ./img3-desk-2x.jpg
-                  "
+                  media="(min-width:320px)"
+                  srcset="./images/masters/img3-1х.jpg 1x, ./img3-2х.jpg 2x"
                 />
                 <img
                   class="workers-photo"
@@ -384,8 +384,11 @@
             <li class="workers-list-item">
               <picture>
                 <source
-                  media="(min-width:320px)"
-                  srcset="./images/masters/img4-1х.jpg 1x, ./img4-2х.jpg 2x"
+                  media="(min-width:1200px)"
+                  srcset="
+                    ./images/masters/img4-desk-1x.jpg 1x,
+                    ./img4-desk-2x.jpg                2x
+                  "
                 />
                 <source
                   media="(min-width:768px)"
@@ -395,11 +398,8 @@
                   "
                 />
                 <source
-                  media="(min-width:1200px)"
-                  srcset="
-                    ./images/masters/img4-desk-1x.jpg 1x,
-                    ./img4-desk-2x.jpg                2x
-                  "
+                  media="(min-width:320px)"
+                  srcset="./images/masters/img4-1х.jpg 1x, ./img4-2х.jpg 2x"
                 />
                 <img
                   class="workers-photo"
@@ -447,7 +447,7 @@
         </div>
       </section>
 
-      <!--customers-->
+      <!--customers
 
       <section class="customers block">
         <div class="container">
@@ -497,7 +497,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section>-->
     </main>
 
     <!--foot
