--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         </div>
       </section>
 
-      <!--what we do
+      <!--what we do-->
 
       <section class="our-work">
         <div class="container">
@@ -187,7 +187,7 @@
             </li>
           </ul>
         </div>
-      </section>-->
+      </section>
 
       <!--team-->
 
@@ -447,9 +447,9 @@
         </div>
       </section>
 
-      <!--customers
+      <!--customers-->
 
-      <section class="customers block">
+      <section class="customers">
         <div class="container">
           <h2 class="subtitle">Постоянные клиенты</h2>
           <ul class="costumers-list list">
@@ -497,7 +497,7 @@
             </li>
           </ul>
         </div>
-      </section>-->
+      </section>
     </main>
 
     <!--foot
