--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
       </section>
     </main>
 
-    <!--foot
+    <!--foot-->
     <footer class="footer">
       <div class="container">
         <div class="footer-address-container">
@@ -510,14 +510,14 @@
           <address class="footer-contact">
             <p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p>
             <ul class="fotter-list list">
-              <li>
+              <li class="footer-contact-address">
                 <a
                   class="footer-contact-mail link"
                   href="mailto:info@example.com"
                   >info@example.com</a
                 >
               </li>
-              <li>
+              <li class="footer-contact-address">
                 <a class="footer-contact-tel link" href="tel:+380991111111"
                   >+38 099 111 11 11</a
                 >
@@ -576,7 +576,7 @@
           </form>
         </div>
       </div>
-    </footer>-->
+    </footer>
 
     <!--backdrop
     <div class="backdrop is-hidden" data-modal>
