--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
 
   <body>
-    <!--
+    <!--header-->
     <header class="header">
       <div class="container">
         <nav class="navigation">
@@ -59,7 +59,7 @@
         </address>
       </div>
     </header>
--->
+
     <main>
       <!--hero-->
       <section class="hero">
@@ -500,63 +500,65 @@
       </section>
     </main>
 
-    <!--foot-->
+    <!--foot
     <footer class="footer">
       <div class="container">
-        <div class="footer-address-container">
-          <a class="logo-footer link" href="#"
-            ><span class="logo-accent">Web</span>Studio
-          </a>
-          <address class="footer-contact">
-            <p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p>
-            <ul class="fotter-list list">
-              <li class="footer-contact-address">
-                <a
-                  class="footer-contact-mail link"
-                  href="mailto:info@example.com"
-                  >info@example.com</a
-                >
+        <div class="footer-flex">
+          <div class="footer-address-container">
+            <a class="logo-footer link" href="#"
+              ><span class="logo-accent">Web</span>Studio
+            </a>
+            <address class="footer-contact">
+              <p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p>
+              <ul class="fotter-list list">
+                <li class="footer-contact-address">
+                  <a
+                    class="footer-contact-mail link"
+                    href="mailto:info@example.com"
+                    >info@example.com</a
+                  >
+                </li>
+                <li class="footer-contact-address">
+                  <a class="footer-contact-tel link" href="tel:+380991111111"
+                    >+38 099 111 11 11</a
+                  >
+                </li>
+              </ul>
+            </address>
+          </div>
+          <div class="footer-container-slogan">
+            <p class="footer-slogan">присоединяйтесь</p>
+            <ul class="footer-social-list list">
+              <li class="footer-social-list-item">
+                <a class="footer-social-link" href="">
+                  <svg class="footer-social-icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-instagram"></use>
+                  </svg>
+                </a>
               </li>
-              <li class="footer-contact-address">
-                <a class="footer-contact-tel link" href="tel:+380991111111"
-                  >+38 099 111 11 11</a
-                >
+              <li class="footer-social-list-item">
+                <a class="footer-social-link" href="">
+                  <svg class="footer-social-icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-social-list-item">
+                <a class="footer-social-link" href="">
+                  <svg class="footer-social-icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-social-list-item">
+                <a class="footer-social-link" href="">
+                  <svg class="footer-social-icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
-          </address>
-        </div>
-        <div class="footer-container-slogan">
-          <p class="footer-slogan">присоединяйтесь</p>
-          <ul class="footer-social-list list">
-            <li class="footer-social-list-item">
-              <a class="footer-social-link" href="">
-                <svg class="footer-social-icon" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-social-list-item">
-              <a class="footer-social-link" href="">
-                <svg class="footer-social-icon" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-social-list-item">
-              <a class="footer-social-link" href="">
-                <svg class="footer-social-icon" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-social-list-item">
-              <a class="footer-social-link" href="">
-                <svg class="footer-social-icon" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+          </div>
         </div>
         <div class="footer-group">
           <p class="footer-slogan">Подпишитесь на рассылку</p>
@@ -576,7 +578,7 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer>-->
 
     <!--backdrop
     <div class="backdrop is-hidden" data-modal>
