--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
   </head>
 
   <body>
-    <header class="header">
+    <!--<header class="header">
       <div class="container">
         <nav class="navigation">
           <a class="logo link" href="index.html">
@@ -57,11 +57,11 @@
           </a>
         </address>
       </div>
-    </header>
+    </header>-->
 
     <!--portfolio-->
     <main>
-      <section class="section-portfolio">
+      <section class="section-portfolio block">
         <div class="container">
           <h1 class="visually-hidden" hidden>портфолио</h1>
           <ul class="button-list list">
@@ -89,6 +89,7 @@
               </button>
             </li>
           </ul>
+
           <!--portfolio work  examples list-->
           <ul class="work-examples-list list">
             <li class="work-examples-item">
@@ -297,7 +298,7 @@
         </div>
       </section>
     </main>
-    <!--foot-->
+    <!--foot
     <footer class="footer">
       <div class="container">
         <div class="footer-address-container">
@@ -374,6 +375,6 @@
         </div>
         </div>
       </div>
-    </footer>
+    </footer>-->
   </body>
 </html>
