--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,7 @@
       <section class="section-portfolio">
         <div class="container">
           <h1 class="visually-hidden" hidden>портфолио</h1>
-          <!-- <ul class="button-list list">
+          <ul class="button-list list">
             <li class="modal-button">
               <button class="modal-button-portfolio" type="button">Все</button>
             </li>
@@ -88,7 +88,7 @@
                 Маркетинг
               </button>
             </li>
-          </ul>-->
+          </ul>
 
           <!--portfolio work  examples list-->
           <ul class="work-examples-list list">
