--- a/portfolio.html
+++ b/portfolio.html
@@ -476,7 +476,7 @@
         </div>
       </section>
     </main>
-    <!--foot
+    <!--foot-->
     <footer class="footer">
       <div class="container">
         <div class="footer-address-container">
@@ -553,6 +553,6 @@
         </div>
         </div>
       </div>
-    </footer>-->
+    </footer>
   </body>
 </html>
