--- a/index.html
+++ b/index.html
@@ -500,10 +500,10 @@
       </section>
     </main>
 
-    <!--foot
+    <!--foot-->
     <footer class="footer">
       <div class="container">
-        <div class="footer-flex">
+        <div class="footer-flex-container">
           <div class="footer-address-container">
             <a class="logo-footer link" href="#"
               ><span class="logo-accent">Web</span>Studio
@@ -563,12 +563,14 @@
         <div class="footer-group">
           <p class="footer-slogan">Подпишитесь на рассылку</p>
           <form action="#" class="footer-form">
+            <p class="form-subscribe">
             <input
               class="footer-form-input"
               type="email"
               name="email"
               placeholder="E-mail"
             />
+            </p>
             <button class="button-subscribe" type="submit">
               <span class="subscribe-text">Подписаться</span>
               <svg width="24" height="24">
@@ -578,7 +580,7 @@
           </form>
         </div>
       </div>
-    </footer>-->
+    </footer>
 
     <!--backdrop
     <div class="backdrop is-hidden" data-modal>
